# GRSISort

./: .clang-format  .clang-tidy  .clangd  .gitexclude  .gitignore  .grsi.mimes  .grsi_history  .grsi_logon  .grsirc  .makefile.swp  .mega-linter.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GenerateVersionHeader.cmake  LICENSE  README  README.html  README.md  SOURCEME.csh  SOURCEME.sh  ____init_____8py.html  ____init_____8py_source.html  _alphanumeric_helper_8cxx.html  _alphanumeric_helper_8cxx__incl.map  _alphanumeric_helper_8cxx__incl.md5  _alphanumeric_helper_8cxx_source.html  _alphanumeric_helper_8hh.html  _alphanumeric_helper_8hh.js  _alphanumeric_helper_8hh__dep__incl.map  _alphanumeric_helper_8hh__dep__incl.md5  _alphanumeric_helper_8hh__incl.map  _alphanumeric_helper_8hh__incl.md5  _alphanumeric_helper_8hh_source.html  _alphanumeric_selector_8_c.html  _alphanumeric_selector_8_c.js  _alphanumeric_selector_8_c__incl.map  _alphanumeric_selector_8_c__incl.md5  _alphanumeric_selector_8_c_source.html  _alphanumeric_selector_8h.html  (+6126 more)
Examples/: checklog.sh  sort.sh
GRSIProof/: AlphanumericSelector.C  AlphanumericSelector.h  AngularCorrelationSelector.C  AngularCorrelationSelector.h  BasicPACESEventSelector.C  BasicPACESEventSelector.h  CrossTalk.C  CrossTalk.h  ExampleEventSelector.C  ExampleEventSelector.h  ExampleFragmentSelector.C  ExampleFragmentSelector.h  ExampleTreeSelector.C  ExampleTreeSelector.h  FastTimingHistSelector.C  FastTimingHistSelector.h  GriffinKValueSelector.C  GriffinKValueSelector.h  PACESAngularCorrelationEventSelector.C  PACESAngularCorrelationEventSelector.h  TimeWalkSelector.C  TimeWalkSelector.h  grsiproof.cxx
Sandbox/: .Angles.h.swp  .Position.cxx.swp  .Position.h.swp  .blank_file  NewGrifCal.cal  Position  Position.cxx  Position.cxx~  Position.h  TFragmentSelector.cxx  TFragmentSelector.h  Test.cxx  UserFillObj.h  UserInitObj.h  hists00000_000.root  main.cxx  rootlogon.C
doxygen/: Doxyfile  DoxygenLayout.xml  Makefile  customdoxygen.css  header.html  makehtmlfooter.sh
examples/: AlphanumericHelper.cxx  AlphanumericHelper.hh  AngularCorrelationHelper.cxx  AngularCorrelationHelper.hh  AngularCorrelationHelper.par  AngularCorrelationSettings.par  ComptonPolarimetryHelper.cxx  ComptonPolarimetryHelper.hh  CrossTalkCheckHelper.cxx  CrossTalkCheckHelper.hh  CrossTalkHelper.cxx  CrossTalkHelper.hh  DirectoryHelper.cxx  DirectoryHelper.hh  Efficiency.par  EfficiencyHelper.cxx  EfficiencyHelper.hh  ExampleEventHelper.cxx  ExampleEventHelper.hh  ExampleFragmentHelper.cxx  ExampleFragmentHelper.hh  ExampleTreeHelper.cxx  ExampleTreeHelper.hh  GriffinKValueHelper.cxx  GriffinKValueHelper.hh  SummingCorrections.par  SummingCorrectionsHelper.cxx  SummingCorrectionsHelper.hh  TacOffsetHelper.cxx  TacOffsetHelper.hh  TestHelper.cxx  TestHelper.hh  TimeWalkHelper.cxx  TimeWalkHelper.hh  checklog.sh  exAnalysis.cxx  grsiruninfoexample.info  makefile  myodb.xml  sort.sh
histos/: MakeAnalysisHistograms.cxx  MakeFragmentHistograms.cxx  MakeGriffinFragmentHistograms.cxx  MakeGriffinHistograms.cxx  MakeHistograms.cxx  MakeTigressHistograms.cxx
htmldoc/: (UNKNOWN)_Index.html  ClassHierarchy.html  ClassIndex.html  Globals.h  INCLUDE_Index.html  LibraryDependencies.dot  LibraryDependencies.html  ListOfTypes.html  TBGOData.html  TCSM.h  TCSM.html  TCSMData.h  TCSMData.html  TCSMHit.h  TCSMHit.html  TChannel.h  TChannel.html  TCrystalHit.h  TCrystalHit.html  TDataParser.h  TDataParser.html  TFragment.h  TFragment.html  TFragmentQueue.html  TFragmentSelector.h  TFragmentSelector.html  TGRSIDetector.h  TGRSIDetector.html  TGRSIDetectorData.h  TGRSIDetectorData.html  TGRSIDetectorHit.html  TGRSILoop.html  TGRSIOptions.html  TGRSIRootIO.h  TGRSIRootIO.html  TGRSIRunInfo.h  TGRSIRunInfo.html  TGRSIStats.html  TGRSIint.h  TGRSIint.html  (+28 more)
icons/: cog.xpm  hdb_s.xpm  hdb_t.xpm
include/: .TChannel.h.swp  .TEnergyLevel.h.swp  .TGRSIFitter.h.swo  .TTransition.h.swp  ArgParser.h  DynamicLibrary.h  FullPath.h  GCanvas.h  GChain.h  GCube.h  GDirectory.h  GFile.h  GGaus.h  GH1D.h  GH2Base.h  GH2D.h  GH2I.h  GHSym.h  GHistBrowser.h  GNotifier.h  GPeak.h  GPopup.h  GROOTGuiFactory.h  GRSIVersion.h  GRootBrowser.h  GRootCanvas.h  GRootCanvasManager.h  GRootCommands.h  GRootFunctions.h  GRootGlobals.h  GRootGuiFactory.h  GRootObjectManager.h  GSnapshot.h  GTree.h  GValue.h  GVersion.h  GVersion.h.in  Globals.h  StoppableThread.h  SuppressTH1GDirectory.h  (+213 more)
libraries/: makefile
myAnalysis/: .blank_file
myanalysis/: makefile
pygui/: AnsiColorText.py  grut-view.py  hist_tab.py  mainwindow.py  run_command.py  status_widget.py  tcut_tab.py  util.py  variable_tab.py
scripts/: #temperature-correction.cxx#  BremMatrices.cxx  CycleMatrices.cxx  Deadtime.cxx  DescantMatrices.cxx  DroppedData.C  FitMg22.cxx  GRIFFIN_PACES_AngleCalc.C  GateBG.C  GriffinCTFix.cxx  LaBr-timing.cxx  LeanCorrelations.cxx  LeanMatrices.cxx  Mg22Matrices.cxx  correction_to_the_temperature.cxx  gainshift_timing.cxx  makefile  tac_calibrator.cxx  temperature-correction.cxx  write_cal.cxx
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  (+141 more)
src/: grsisort.cxx  main.cxx  makefile
users/: TUserSortInfo.cxx  UserFillObj.h  UserInitObj.h  makefile
util/: AddToChannelNumber.cxx  AnalyzeComptonMatrices.cxx  AnalyzeDataLoss.cxx  AnalyzeFragmentTree.C  AngularCorrelations.C  BetaGamma.C  BremSuppress.C  Browser_spe.C  Compton_Scale_Plot.cxx  CrossTalkFix.cxx  CycleFitUtils.C  Deadtime.cxx  DroppedData.C  EfficCal.C  EfficCal.cxx  EnableCrosstalkCorrection.cxx  EnergyCal.cxx  ErrorReport.sh  ExamineMidasFile.C  ExamineMidasFile.cxx  GainDrift.cxx  GainMatchGRIFFIN.C  GainMatchGRIFFIN.cxx  GainMatchPlot.C  (+60 more)
(+2864 files in other folders)
